...
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_caption"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_caption"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_caption"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/genderSpinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_caption"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_caption"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:id="@+id/editTextAgeMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minAgeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/min_age_caption"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:id="@+id/editTextAgeMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/maxAgeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_age_caption"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:id="@+id/editTextProximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/proximityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/proximity_caption"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bioInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio_caption"
                android:inputType="textMultiLine"
                android:lines="3"
                android:minLines="2"
...
                android:gravity="top|start"
                android:scrollbars="vertical"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_acc_caption"/>
    </LinearLayout>

</ScrollView>
