...
    <string name="min_age_caption">Minimum Age (Default your age - 2)</string>
    <string name="max_age_caption">Maximum Age (Default your age + 2)</string>
    <string name="proximity_caption">Proximity (Default 20 km)</string>
    <string name="bio_caption">Biography</string>
    <string name="create_acc_caption">Create Account</string>
    <string-array name="gender_choices">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="gender_choices2">
        <item>Select Gender</item>
        <item>Male</item>
...
